Archive2/fb/b9049c48b12233/main.cpp
template<typename Itr, typename SizeT> inline Itr next(Itr it, SizeT /*n*/ = 1)
{ return it; }

int main()
{
    int i = 0;
    next(i);
}